--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,5 @@
 = Functional Design Kotlin Edition
 
 These are the code examples for the book Functional Design rewritten to Kotlin (originally in Clojure).
+
+* link:chapters/03.adoc[Chapter 3]
