--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,9 @@
-= Functional Design Kotlin Edition
+= Functional Design (Kotlin Edition)
 
-These are the code examples for the book Functional Design rewritten to Kotlin (originally in Clojure).
+These are the code examples for the book
+https://learning.oreilly.com/library/view/functional-design-principles/9780138176518/[Functional Design]
+rewritten to Kotlin.
+
+The original Clojure examples can be found in https://github.com/unclebob/FunctionalDesign[unclebob/FunctionalDesign].
 
 * link:chapters/03.adoc[Chapter 3]
